jsdialog: fix odd alignment for recent and favorite characters

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -184,6 +184,13 @@ td.jsdialog > [id^='table-box']:not(.sidebar) {
 	grid-gap: 4px;
 }
 
+/* Special Characters dialog */
+#SpecialCharactersDialog #viewgrid,
+#SpecialCharactersDialog #favgrid {
+	grid-gap: 4px;
+	width: fit-content;
+}
+
 /* Find and replace dialog */
 #search_grid,
 #replace_grid {
